package creational.strategy.interfaces;

public interface IFlyStrategy {
    void fly();
}
