package creational.strategy.interfaces;

public interface IQuackStrategy {
    void quack();
}
